# egisz-monitor

./: .env.example  .gitignore  AGENTS.md  METABASE_PERSISTENCE_SETUP.md  METABASE_SETUP.sh  MIGRATION_COMPLETE.md  Makefile  Metabase_Guide.md  README.md  SEMANTIC_LAYER_IMPLEMENTATION.md  build-and-push.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix_dashboards.js  start.ps1  sync_sql.js
backend/: .dockerignore  .dockerignore.refactored  .env.example  Dockerfile  Dockerfile.refactored  package-lock.json  package.json  sync_sql.ts  tsconfig.json
egisz-monitor-corp/: .gitignore  AGENTS.md  README.md  pyproject.toml  start.ps1
egisz-monitor-corp/config/: egisz_corp.example.yaml  egisz_corp.k8s.example.yaml
egisz-monitor-corp/egisz_monitor_corp/: __init__.py  cli.py  config_app.py  config_loader.py  parser.py  pg_warehouse.py  sql_util.py
egisz-monitor-corp/k8s/: README.md  metabase.yaml
egisz-monitor-corp/k8s/jobs/: apply-dwh-schema.yaml  pg-bootstrap-metabase-db.yaml
egisz-monitor-corp/k8s/postgres/: postgres-secret.example.yaml
egisz-monitor-corp/metabase/: provision.sh
egisz-monitor-corp/tests/: test_parser.py
frontend/: .dockerignore  .dockerignore.refactored  Dockerfile  Dockerfile.refactored  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
metabase/: Dockerfile  entrypoint.sh
metabase-init/: provision.sh  setup-dashboards.sh
metabase-proxy/: Dockerfile  entrypoint.sh  nginx.conf.template
metabase_dashboards/: clinic_analysis_dashboard.json  main_dashboard.json  (+2 more)
(+24 files in other folders)
