[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "egisz-monitor-corp"
version = "0.1.0"
description = "Python ETL core: LOGTEXT SOAP parsing for EGISZ REMD monitoring DWH"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["egisz_monitor_corp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
